# git-gh-actions-lab

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/actions/build-label/: action.yml
.github/actions/db-writer/: Dockerfile  action.yml  entrypoint.py
.github/workflows/: ci.yml  release.yml  reusable-test.yml
app/: main.py
tests/: test_db_integration.py  test_main.py
