[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-gh-actions-lab"
version = "0.1.2"
description = "Git/GitHub/GitHub Actions practice lab"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hasan Ahmad" }]

[tool.setuptools]
packages = ["app"]